Updating terms and privacy links

--- a/public/gcweb/samples/transactional-en.html
+++ b/public/gcweb/samples/transactional-en.html
@@ -145,10 +145,10 @@ defPreFooter.outerHTML = wet.builder.preFooter({
                 <pre>
 defFooter.outerHTML = wet.builder.footer({
 ...
-    "termsLink": [{
+    "termsLink": {
         "href": "https://www.canada.ca/en/transparency/terms.html",
         "newWindow": true
-    }]
+    }
 ...
 });
                 </pre>
@@ -156,10 +156,10 @@ defFooter.outerHTML = wet.builder.footer({
                 <pre>
 defFooter.outerHTML = wet.builder.footer({
 ...
-    "privacyLink": [{
+    "privacyLink": {
         "href": "https://www.canada.ca/en/transparency/privacy.html",
         "newWindow": true
-    }]
+    }
 ...
 });
                 </pre>
@@ -191,12 +191,12 @@ defFooter.outerHTML = wet.builder.footer({
 				"cdnEnv": "esdcprod",
 				"showFooter": false,
 				"showFeatures": false,
-				"termsLink": [{
+				"termsLink": {
 					"href": "#"
-				}],
-				"privacyLink": [{
+				},
+				"privacyLink": {
 					"newWindow": true
-				}]
+				}
 			});
 		</script>
 		<!-- Write closure template -->
